# haskell-template

./: .gitignore  README.md  cabal.project  default.nix  release.nix
.github/workflows/: bump-deps.yaml
haskell-template/: LICENSE  default.nix  haskell-template.cabal  hie.yaml  shell.nix
nix/: default.nix  sources.json
